@@ -1,4 +1,5 @@
-- Improvement: AdministrativeOffice coordinator not mandatory 
+- Improvement: AdministrativeOffice coordinator not mandatory
+- Fix: Bootstrap countries with english names
 
 30.2.0 (05-05-2020)
 - Improvement: Moved AuthenticationRedirector to academic core
